// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XCM tests for Mangata <-> Statemine mangata transfer assets to statemine 1`] = `
{
  "free": 990000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Statemine mangata transfer assets to statemine 2`] = `
{
  "balance": 1009996407,
  "extra": null,
  "isFrozen": false,
  "reason": {
    "consumer": null,
  },
}
`;

exports[`XCM tests for Mangata <-> Statemine mangata transfer assets to statemine: system events 1`] = `[]`;

exports[`XCM tests for Mangata <-> Statemine statemine transfer assets to mangata 1`] = `
{
  "balance": 990000000,
  "extra": null,
  "isFrozen": false,
  "reason": {
    "consumer": null,
  },
}
`;

exports[`XCM tests for Mangata <-> Statemine statemine transfer assets to mangata 2`] = `
{
  "free": 1009991936,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Statemine statemine transfer assets to mangata: events 1`] = `
[
  {
    "data": [
      {
        "Complete": {
          "proofSize": "(redacted)",
          "refTime": "(redacted)",
        },
      },
    ],
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;

exports[`XCM tests for Mangata <-> Statemine statemine transfer assets to mangata: system events 1`] = `[]`;
